--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row" style="width:99%!important">
     <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
         <h4 class="text-right">Резюме</h4>
     </div>
