--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -57,9 +57,9 @@
                             </div>
                         </div>
                         <div class="uk-width-2-5 uk-flex uk-flex-column uk-text-left">
-                            <label style="color: white; font-size: 1.5em;">Введите имя магазина</label>
+                            <label style="color: white; font-size: 1.5em;">Название магазина</label>
                             <input class="uk-input uk-margin-remove-bottom uk-width-1" style="font-size: 2em;"
-                                type="text" placeholder="Input">
+                                type="text" placeholder="Введите название">
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <label> Описание магазина </label>
                     <br>
                     <br>
-                    <textarea class="uk-textarea" rows="5" placeholder="Textarea"></textarea>
+                    <textarea class="uk-textarea" rows="5"></textarea>
                 </div>
             </div>
 
