--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -20,7 +20,7 @@
 
 <body style="width: 100%; height: 100%;">
     <div style="width: 80%; margin: 0 auto;">
-        <div class="uk-flex uk-flex-between uk-margin-medium-bottom">
+        <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-medium-bottom">
             <h1 style="border-top: 1px solid #0a3644e6; padding: 5% 0;">Бренды</h1>
             <h3 class="uk-text-left uk-width-2-3 uk-text-light">Здесь ты можешь найти все бренды, которые продают у нас
                 на площадке. В
