--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -77,6 +77,8 @@
                     </div>
                     <div class="uk-width-1-1 uk-text-center">
                         <br>
+                        <form action="POST">
+                            {% csrf_token %}
                             <!-- <a href="https://befreela.partners.ru/" class="uk-width-1 uk-button uk-button-secondary uk-border-rounded" style="margin: 0 auto; font-size: large;background-color: purple">Зарегестрироваться</a> -->
                             <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%; text-align: center">
                                 <label for="phonenumber" class="uk-text-muted">Контактный телефон</label>
@@ -102,11 +104,12 @@
                             </select>
                         </div>
                         <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
-                            <button onclick="JSalert()" class="uk-button uk-button-primary uk-width-4-5 uk-border-rounded" id="registerBtn"
-                            disabled>Получить
-                            код</button>
+                            <button type="submit" onclick="JSalert()" class="uk-button uk-button-primary uk-width-4-5 uk-border-rounded" id="registerBtn"
+                            disabled>Отправить заявку</button>
                         </div>
                     </div>
+
+                </form>
 
                     </div>
 
