--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="uk-width-1-1 uk-text-center">
                         <br>
-                        <form action="POST">
+                        <form method="POST">
                             {% csrf_token %}
                             <!-- <a href="https://befreela.partners.ru/" class="uk-width-1 uk-button uk-button-secondary uk-border-rounded" style="margin: 0 auto; font-size: large;background-color: purple">Зарегестрироваться</a> -->
                             <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%; text-align: center">
@@ -104,7 +104,7 @@
                             </select>
                         </div>
                         <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
-                            <button type="submit" onclick="JSalert()" class="uk-button uk-button-primary uk-width-4-5 uk-border-rounded" id="registerBtn"
+                            <button type="submit" class="uk-button uk-button-primary uk-width-4-5 uk-border-rounded" id="registerBtn"
                             disabled>Отправить заявку</button>
                         </div>
                     </div>
