--- a/bizopt/BO/templates/registration/login.html
+++ b/bizopt/BO/templates/registration/login.html
@@ -11,7 +11,7 @@
 	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 </head>
 
-<body oncontextmenu='return false' class='snippet-body'>
+<body>
 	<div class="container" style="margin-top: 5%">
 		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
 		<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
