--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -1,6 +1,6 @@
 <div class="row d-flex justify-content-center align-items-center" style="width: 99%; margin: 0 auto;">
     <div class="col-md-8">
-        <form id="regForm" method="POST" action="" enctype="multipart/form-data">
+        <form id="regForm" method="POST" action="">
             <h1 class="mb-5">Создать товар</h1>
 
             <!-- start of bloc 1 -->
