--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -15,7 +15,7 @@
 		trasform: 0.5s;	
 	}
 </style>
-<body oncontextmenu='return false' class='snippet-body' style="width: 80%; margin: 0 auto;">
+<body style="width: 80%; margin: 0 auto;">
 	<div class="container" style="margin-top: 5%">
 		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
 		<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
@@ -57,7 +57,6 @@
 					</div>
 					
 					<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" id="signinbtn" type="submit" name="btnform1">Зарегестрироваться</button>
-					{% csrf_token %}
 				</form>
 			<form method="POST" action="." id="signin-form" class="uk-text-center">
 				{% csrf_token %}
