--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -42,7 +42,9 @@
 <body>
 
 
-    <form>
+    <form method="post" action="/becomeCreator/">
+        {% csrf_token %}
+
         <div id="main-img">
             <div class="uk-width-4-5" style="margin: 0 auto; padding: 2% 0px">
                 <div class="uk-card-header" style="padding: 0px;">
@@ -59,7 +61,7 @@
                         <div class="uk-width-2-5 uk-flex uk-flex-column uk-text-left">
                             <label style="color: white; font-size: 1.5em;">Название магазина</label>
                             <input class="uk-input uk-margin-remove-bottom uk-width-1" style="font-size: 2em;"
-                                type="text" placeholder="Введите название">
+                                type="text" placeholder="{{shop.name}}" value="{{shop.name}}" name="name">
                         </div>
                     </div>
                 </div>
@@ -80,25 +82,63 @@
                     <br>
                     <br>
                     <div class="uk-flex uk-flex-wrap uk-flex-wrap-around">
-                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория1</a>
-                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория2</a>
-                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория3</a>
-                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория4</a>
-                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория5</a>
-                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория6</a>
+
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">Одежда</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">Обувь</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">Косметика</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">Украшения</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">Интерьер</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">Аксессуары</a>
                     </div>
                     <input type="text" name="chosenCategoties" id="chosenCategoties" style="display: none;" readonly>
+                    <br>
+                    <br>
+
+                    <label> Выбрано </label>
+                    <br>
+                    <br>
+                    <div class="uk-flex uk-flex-wrap uk-flex-wrap-around">
+
+                        {% for category in categorys%}
+                        
+                        <a class="uk-button uk-text-bold uk-button-link category chosen" >{{category}}</a>
+                        
+                        {% endfor %}
+
+                    </div>
                 </div>
+
+
                 <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2@m">
                     <label> Статус магазина </label>
                     <br>
                     <br>
-                    <select class="uk-select">
-                        <option value="Работает">Работает</option>
-                        <option value="Заморожен">Заморожен</option>
-                        <option value="Не работает">Не работает</option>
-                        <option value="Физлицо">Физлицо</option>
+                    {% if shop.status == 'work' %}
+
+                    <select class="uk-select" name="status">
+                        <option value="work">Работает</option>
+                        <option value="freez">Заморожен</option>
+                        <option value="not-work">Не работает</option>
                     </select>
+
+                    {% elif shop.status == 'freez' %}
+
+                    <select class="uk-select" name="status">
+                        <option value="freez">Заморожен</option>
+                        <option value="work">Работает</option>
+                        <option value="not-work">Не работает</option>
+                    </select>
+
+                    {% else %}
+
+                    <select class="uk-select" name="status">
+                        <option value="not-work">Не работает</option>
+                        <option value="work">Работает</option>
+                        <option value="freez">Заморожен</option>
+                    </select>
+
+                    {% endif %}
+
                 </div>
             </div>
 
@@ -110,7 +150,7 @@
                     <label> Описание магазина </label>
                     <br>
                     <br>
-                    <textarea class="uk-textarea" rows="5"></textarea>
+                    <textarea name="description" class="uk-textarea" rows="5" placeholder="{{shop.description}}">{{shop.description}}</textarea>
                 </div>
             </div>
 
@@ -119,7 +159,7 @@
 
             <div class="uk-width-2-3@m uk-flex uk-flex-between" style="margin: 0 auto;">
                 <div style="display: inline-block; margin: 0 10px" class="uk-width-1 uk-text-right">
-                    <button class="uk-button uk-button-primary" type="submit">Сохранить</button>
+                    <button class="uk-button uk-button-primary" type="submit" name="profile_saver2">Сохранить</button>
                 </div>
             </div>
         </div>
